--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mongoose": "^9.1.5",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
